2008-02-15  Christian Kellner  <gicmo@gnome.org>

	* daemon/gvfsjobenumerate.c:
	Fix a little crasher (NULL terminate g_build_filename) that
	was introduced by the optional uri addition change to enumerate.

2008-02-15  Christian Kellner  <gicmo@gnome.org>

	* daemon/gvfsbackenddav.c: 
	Completly redo Multistatus parsing.

2008-02-15  Alexander Larsson  <alexl@redhat.com>

        * client/gdaemonfile.c:
	Pass uri in query_info_async too.

2008-02-15  Alexander Larsson  <alexl@redhat.com>

        * client/gdaemonfile.c:
	Pass an optional uri to query_info and enumerate
	
        * daemon/gvfsbackend.[ch]:
	Add automatic info filling, implement thumbnail
	checking if uri passed in.
	
	* daemon/gvfsjobenumerate.[ch]:
        * daemon/gvfsjobqueryinfo.[ch]:
	Get optional uri argument.
	Call automatic backend info filling.

2008-02-15  Christian Kellner  <gicmo@gnome.org>

	* daemon/gvfsbackendhttp.c: (g_vfs_backend_uri_for_filename):
	Escape the filename.

2008-02-14  Alexander Larsson  <alexl@redhat.com>

	* daemon/gvfsbackendcomputer.c:
	If lookup returns NULL it already set the error.
	Handle this in all callers.

2008-02-14  Alexander Larsson  <alexl@redhat.com>

	* daemon/Makefile.am:
	Disable install of ftp.mount for now

2008-02-14  Alexander Larsson  <alexl@redhat.com>

        * daemon/gvfschannel.c:
        Fix case where current_job has died (NULL) but
	the current_job_seq_nr was left and matched
	a sent cancel op. (#515959)

2008-02-13  Alexander Larsson  <alexl@redhat.com>

	* daemon/gvfsbackendsmb.c (do_read):
	Limit smb reads to 65535 bytes to avoid issues on
	large reads.

2008-02-13  Ryan Lortie  <desrt@desrt.ca>

	* daemon/gvfsbackendtrash.c:
	Keep track of the number of top level items in the trash.
	Expose this value via the trash::item-count attribute.

2008-02-13  Alexander Larsson  <alexl@redhat.com>

        * hal/ghalmount.c:
	Don't show nfs mounts (#516036)

2008-02-12  Alexander Larsson  <alexl@redhat.com>
