@@ -163,7 +163,6 @@ soup_output_stream_new (SoupSession *session, SoupMessage *msg, goffset size)
   SoupOutputStream *stream;
   SoupOutputStreamPrivate *priv;
 
-  g_return_val_if_fail (SOUP_IS_SESSION_ASYNC (session), NULL);
   g_return_val_if_fail (SOUP_IS_MESSAGE (msg), NULL);
 
   stream = g_object_new (SOUP_TYPE_OUTPUT_STREAM, NULL);
